compiler/test/snapshot/infer-expr/error-when-reassign-to-wrong-type.exp
Error when reassign to wrong type.

SOURCE:
{
  let mut x = 1
  x = "foo"
}

OUTPUT:
Type mismatch
Expected:
    int
Got:
    string

3|    x = "foo"
      ^^^^^^^^^